# hindi-dataset

./: .gitignore  README.md  app.py  constants.py  example.ipynb  example.py  examples.py  home.py  pyproject.toml
audio/cricket_news_in_hindi/: cricket_news_in_hindi.json
audio/finance_in_hindi/: finance_in_hindi.json
audio/history_in_hindi/: history_in_hindi.json
docs/: conf.py  index.rst  yt_audio_collector.rst
docs/_build/doctrees/: constants.doctree  environment.pickle  home.doctree  index.doctree  modules.doctree  overview.doctree  yt_audio_collector.doctree  yt_audio_collector.system_2.doctree  yt_audio_collector.transcript_audio.doctree  (+1 more)
docs/user/: yt_audio_collector.system_2.rst  yt_audio_collector.transcript_audio.rst
language_videos/: convert_to_audio.py  fetch_youtube_data.py
models/: video_id_mode.py
pages/: search.py  upload_file.py
pretrained_models/rescuespeech_sepformer/: decoder.ckpt  encoder.ckpt  hyperparams.yaml  masknet.ckpt
search_data/: processed_audios.json  processed_videos.json
system_2/: chunk_audio.py
test/: test_chunk_audio.py
transcript_audio/: convert_to_audio.py  fetch_youtube_data.py
transcripts/: _cricket_news_in_hindi.json  _history_in_hindi.json  computer_in_hindi.json  computers_in_hindi.json  finance_in_hindi.json  history_in_hindi.json  news_on_air_in_hindi.json
utils/: file_utils.py  ui_utils.py
yt_audio_collector/system_2/: chunk_audio.py  preprocess_audio.py
yt_audio_collector/transcript_audio/: convert_to_audio.py  fetch_youtube_data.py
yt_audio_collector/utils/: ui_utils.py
(+46 files in other folders)
