[tool.poetry]
name = "hindi-dataset"
version = "0.1.0"
description = ""
authors = ["munikumar.mm <munikumar7085@gmail.com>"]
readme = "README.md"
packages = [{include = "hindi_dataset"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.26.0"
google-api-python-client = "^2.98.0"
moviepy = "^1.0.3"
whisper = "^1.1.10"
youtube-dl = "^2021.12.17"
pytube = "^15.0.0"
ffmpeg = "^1.4"
shutils = "^0.1.0"
youtube-transcript-api = "^0.6.1"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
